aangepast, bottombar(kleinerlettertype)  tekst coronomaatregelen en verhaal

--- a/Website/public/OnsVerhaal.html
+++ b/Website/public/OnsVerhaal.html
@@ -23,13 +23,35 @@
 		</div>
 		
 		<div id="pageContent">
-			<p>Dit verhaal begint in Amsterdam. In een krakend.... </p>
+			<p>Dit verhaal begint in Amsterdam in een oud bejaardentehuis, met lekkende plafonds, leidingen met legionella en een klagende lift. Tussen het geschuifel van rollators, klapperende gebitten, ouderengymnastiek en vrijdagmiddagbingo's woonden sinds een aantal maanden studenten.
+			Ik, Arjanna, was een van deze studenten. Het bejaardentehuis zou binnenkort gesloten worden en daarom moesten steeds meer ouderen verhuizen. De bejaarden die steeds meer hun bejaardencollega's zagen vertrekken, konden wel wat gezelschap gebruiken. Na een bijzondere ontmoeting met een huisbaas die op Opwekking vroeg of ik nog een woning nodig had, belandde ik in een schattig seniorenappartementje waar vanuit ik mijn master zou volgen. Op de dag dat ik mijn contract tekende samen met drie anderen, viel me een van de jongens op. Hij had een houten kruis om zijn nek en vertelde dat hij games maakte. Nathan heette hij geloof ik. <br> <br>
+			In de maanden die volgden, leerde ik de bewoners steeds meer kennen. Hun humor, hun gemopper over het eten en hun passies. Met een aantal van hen besloot ik een schilderclubje op te richten en ik genoot ervan om samen met hen te kletsen en te tekenen. De tijd vloog voorbij. Op een vroege ochtend, het was 14 februari, stapte ik de deur uit, toen ik opeens een roos voor mijn deur zag liggen. Een gevouwen roos van papier. Met een klein briefje waarop stond: voor Arjanna. Wie had dat gedaan? Ik was helemaal onderste boven, ik snapte er niets van. Samen met Anne (ceremoniemeester) die ook in Amsterdam woonde, hebben we een paar dagen gespeurd, geprobeerd mensen te polsen en het handschrift te ontcijferen. Ik had geen idee. Totdat ik zaterdag weer ging schilderen. <br> <br>
+	
+			Nathans perspectief
+			<br> <br>
+
+			In de weken die volgden en waarin we afspraken, leerde ik Nathan steeds beter kennen. Ik had het gevoel dat God zei dat dit mijn man zou worden. Maar tegelijk vond ik het super spannend om met hem af te spreken. Ik had nogal wat dingetjes uit mijn verleden en nachtmerries die hem vast zouden afschrikken en waardoor hij zou wegrennen. Toch besloot ik het hem te vertellen, daar had Nathan recht op. Op een bankje in het park, gingen we s ochtends samen ontbijten en bijbellezen. Het was voor mij de mooiste date van allemaal. Toen ik Nathan vertelde over alles wat me had bezig gehouden rende hij niet weg.. Hij weigerde. Hij wilde me steunen en liet me zien hoe sterk zijn liefde was door Jezus die in hem werkte. 
+
+			Door veel wandelingen, gesprekken, liedjes en stille tijd samen, kregen we steeds meer vertrouwen in elkaar en in God. Ik kan met Nathan lachen, bidden en huilen. Precies een jaar nadat we een relatie kregen stond Nathan opeens in de klas, waar ik les aan het geven was. Opnieuw had hij het voor elkaar gekregen om me helemaal te verbazen. Stamelend liep ik achter hem aan, maar hij liet zich niet van zn plan afbrengen. Na een treinreis en een wandeling stonden we opeens voor het Muiderslot. Ik was heel blij dat hij zo'n leuk uitje had bedacht en genoot van het museum. Toen we bovenop het kasteel van het uitzicht genoten, ging Nathan plots voor me op de knieën. Natuurlijk zei ik ja! 
+			<br> <br>
+			<img class="center" src="images/foto onder 1.png"> 
+
+			Nathans perspectief 
+			<br> <br>
+
+			In de weken erna zweefden we vanaf onze roze wolk zo de coronatijd in en dachten na over wanneer we wilden trouwen. Het was lastig met al die maatregelen, die misschien nog heel lang zouden duren. Toch werd het steeds duidelijker: we wilden niet deze tijd afwachten in onzekerheid, we wilden gewoon trouwen! En zo kwamen we uit op 31 oktober. Wat er ook gaat gebeuren met corona, we hopen die dag ja tegen elkaar en tegen God te zeggen. 
+			<br> <br>
+			Dit verhaal begon in een bejaardentehuis en we hopen dat het daar natuurlijk ook zal eindigen. Dat we heel veel jaren samen mogen delen, samen liedjes mogen zingen, lachen en God zoeken. Dit verhaal begon ook bij God en door God. Eigenlijk is dit niet ons, maar zijn verhaal. Hij bracht ons op een super mooie manier bij elkaar bij een bejaardenschilderclub. Door onze relatie hebben we al zoveel over God en over onszelf mogen leren en we hopen dat we nog veel meer mogen ontdekken.
+			<br> <br>
+			Liefs, <br>
+			Nathan en Arjanna 
+			</p>
 		</div>			
 		
 		<div class="overlap"></div>
 	</div>
 	<div id="bottomBar" class="woodInfoBar">
-		<h2>Copyright &copy of zoiets</h2>
+		<h3>Copyright &copy of zoiets</h3>
 	</div>	
 </body>
 
