--- a/Website/public/RSVP.html
+++ b/Website/public/RSVP.html
@@ -26,7 +26,7 @@
 		<div class="overlap"></div>
 	</div>
 	<div id="bottomBar" class="woodInfoBar">
-		<h2>Meer info volgt nog!</h2>
+		<h3>Copyright &copy of zoiets</h3>
 	</div>	
 </body>
 </html>
