--- a/Website/public/coronamaatregelen.html
+++ b/Website/public/coronamaatregelen.html
@@ -4,7 +4,6 @@
 	<title>Coronamaatregelen</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/baseLayout.css"/>
-	<link rel="stylesheet" href="css/onsVerhaal.css"/>
 	<link rel="icon" href="favicon.png">
 </head>
 
@@ -24,22 +23,26 @@
 		</div>
 		
 		<div id="pageContent">
-			<p> Helaas zijn er ook wat minder leuke dingen waar we rekening mee moeten houden op de bruiloft. We moeten ons aan de regels 
+			<p> 
+			Helaas zijn er ook wat minder leuke dingen waar we rekening mee moeten houden op de bruiloft. We moeten ons aan de regels 
 			houden rondom het coronavirus. Omdat de maatregelen vaak worden veranderd door de overheid, zal deze pagina vaak worden geüpdatet. 
 			Kijk dus af en toe of er nog een update op de site staat. Ondanks de regels gaan we natuurlijk enorm genieten van deze dag.
 			<br><br>
 			<b>De huidige regels </b>: 
+			</p>
 			<ul>
-			<li> We wijzen je op je eigen verantwoordelijkheid om 1,5 m afstand te houden tot mensen die niet op hetzelfde adres wonen.
-			<li> Als je klachten hebt die bij het coronavirus passen, blijf je thuis.
-			<li> Volg op de locaties de adviezen van personeel op.
-			<li> In de kerk: <br>
+			<li><p>We wijzen je op je eigen verantwoordelijkheid om 1,5 m afstand te houden tot mensen die niet op hetzelfde adres wonen.</p></li>
+			<li><p>Als je klachten hebt die bij het coronavirus passen, blijf je thuis.</p></li>
+			<li><p>Volg op de locaties de adviezen van personeel op.</p></li>
+			<li><p>In de kerk: <br>
 				- Volg de instructies op van de koster. Hij zal je een plek aanwijzen waar je kunt gaan zitten. <br>
 				- Tijdens de dienst mag er ingetogen worden gezongen. <br> 
-			<li> We kunnen door de coronamaatregelen, maar een beperkt aantal mensen uitnodigen. Daarom kun je helaas niet je partner/date/+1 meenemen, als we hem of haar niet hebben uitgenodigd.
-			<li> Geef via de <a href="RSVP.html">RSVP</a> je aanwezigheid aan. Bij de RSVP zullen we om je NAW-gegevens vragen en je telefoonnummer. De RIVM stelt het verplicht om deze gegevens te verzamelen, zodat mogelijk contactonderzoek snel kan worden uitgevoerd. We zullen vertrouwelijk met je gegevens omgaan en ze niet openbaar maken. 
-			<li> In verband met de 1.5 meter afstand, hebben we er voor gekozen geen felicitatierij te houden. We komen graag bij je tafel langs om bij te kletsen en de felicitaties in ontvangst te nemen.
+			<li><p>We kunnen door de coronamaatregelen, maar een beperkt aantal mensen uitnodigen. Daarom kun je helaas niet je partner/date/+1 meenemen, als we hem of haar niet hebben uitgenodigd.
+			<li><p>Geef via de <a href="RSVP.html">RSVP</a> je aanwezigheid aan. Bij de RSVP zullen we om je NAW-gegevens vragen en je telefoonnummer. De RIVM stelt het verplicht om deze gegevens te verzamelen, 
+				zodat mogelijk contactonderzoek snel kan worden uitgevoerd. We zullen vertrouwelijk met je gegevens omgaan en ze niet openbaar maken.</p></li>
+			<li><p>In verband met de 1.5 meter afstand, hebben we er voor gekozen geen felicitatierij te houden. We komen graag bij je tafel langs om bij te kletsen en de felicitaties in ontvangst te nemen.
 			</ul>
+			<p>
 			Kijk voor een volledig overzicht van de regels op <a href= "https://www.rijksoverheid.nl/onderwerpen/coronavirus-covid-19/nederlandse-maatregelen-tegen-het-coronavirus"> rijksoverheid.nl/coronavirus </a>
 			</p>
 		</div>
