--- a/Website/public/coronamaatregelen.html
+++ b/Website/public/coronamaatregelen.html
@@ -43,7 +43,7 @@
 			<li><p>In verband met de 1.5 meter afstand, hebben we er voor gekozen geen felicitatierij te houden. We komen graag bij je tafel langs om bij te kletsen en de felicitaties in ontvangst te nemen.
 			</ul>
 			<p>
-			Kijk voor een volledig overzicht van de regels op <a href= "https://www.rijksoverheid.nl/onderwerpen/coronavirus-covid-19/nederlandse-maatregelen-tegen-het-coronavirus"> rijksoverheid.nl/coronavirus </a>
+			Kijk voor een volledig overzicht van de regels op <a href= "https://www.rijksoverheid.nl/onderwerpen/coronavirus-covid-19/nederlandse-maatregelen-tegen-het-coronavirus" target="_blank"> rijksoverheid.nl/coronavirus </a>
 			</p>
 		</div>
 		
