--- a/Website/public/index.html
+++ b/Website/public/index.html
@@ -24,7 +24,7 @@
 		
 		<div id="pageContent">
 			<p> Welkom op deze website. Leuk dat je er bent! Hier kun je van alles lezen over de bruiloft. Want op 31 oktober 2020 gaan wij, Nathan en Arjanna, Trouwen!</p>
-			<img class="center" src="images/SelfieWaa.jpg"> 
+			<img class="center" src="images/cuteCouple.png"> 
 			<p> We hebben er ontzettend veel zin in en wij hopen dat het een hele mooie dag wordt en dat jij er bij bent! Als je komt, vul dan vooral je 
 			aanwezigheid in via de RSVP. Wil je meer weten over hoe wij elkaar leerden kennen? Kijk dan ook even bij 'Ons verhaal'.
 			<br> <br>
