--- a/Website/public/OnsVerhaal.html
+++ b/Website/public/OnsVerhaal.html
@@ -44,6 +44,8 @@
 			Ik vond het echt onwijs spannend om Arjanna mee uit te vragen. Ik had nog nooit eerder zoiets gedaan. Het was ook heel akward! Maar ik wist dat ik niet lang meer op deze plek zou blijven wonen en 
 			daarom heb ik niet lang gewacht.
 			</br></br>
+			
+			<img class="center" src="images/togetherInDDH.jpeg"/> 
 
 			<i>Arjannas perspectief:</i></br>
 			In de weken die volgden en waarin we afspraken, leerde ik Nathan steeds beter kennen. Ik had het gevoel dat God zei dat dit mijn man zou worden. Maar tegelijk vond ik het super spannend om met hem af te spreken. 
