Made the story a bit more subtle

--- a/Website/public/OnsVerhaal.html
+++ b/Website/public/OnsVerhaal.html
@@ -62,8 +62,8 @@
 			<br><br>
 
 			<i>Nathans perspectief:</i></br>
-			In het begin heb ik het vaak lastig gehad met onze relatie. Vanaf het begin wilde ik er vol voor gaan, maar hoe wist ik nou dat Arjanna 'de ware' zou zijn? Mijn emoties schommelden en ik dacht dat ik niet zou mogen
-			twijfelen als Arjanna echt bij mij zou passen. Dankzij Arjannas onvoorstelbare vertrouwen en dankzij de Bijbel heb ik geleerd dat ware liefde niet afhankelijk is van emoties, maar van een keuze waar je achter blijft 
+			In het begin vond ik het niet makkelijk om een relatie te hebben. Vanaf het begin wilde ik er vol voor gaan, maar hoe wist ik nou dat Arjanna 'de ware' zou zijn? Mijn emoties schommelden 
+			en ik dacht dat ik niet zou mogen twijfelen als Arjanna echt bij mij zou passen. Dankzij Arjannas onvoorstelbare vertrouwen en dankzij de Bijbel heb ik geleerd dat ware liefde niet afhankelijk is van emoties, maar van een keuze waar je achter blijft 
 			staan. Naarmate dit besef groeide, besloot ik dat ik met haar wilde trouwen, want zij vult me aan als geen ander. Arjanna en ik delen onze diepste overtuigingen, we kunnen elkaar steunen op onze zwakste momenten 
 			en ik ken niemand met wie ik zoveel lol kan maken als met Arjanna. Daarom twijfel ik niet langer.
 			</br></br>			
