--- a/Website/public/OnsVerhaal.html
+++ b/Website/public/OnsVerhaal.html
@@ -46,7 +46,7 @@
 			</br></br>
 
 			<i>Arjannas perspectief:</i></br>
-			In de weken die volgden en waarin we afspraken, leerde ik Nathan steeds beter kennen. Ik had het gevoel dat God zei dat dit mijn man zou worden. Maar tegelijk vond ik het super spannend om met hem af te spreken. 
+			In de weken die volgden en waarin we afspraken, leerde ik Nathan steeds beter kennen. Hij was ontzettend lief, geïnteresseerd, gepassioneerd en hield van God. Ik had het gevoel dat God zei dat dit mijn man zou worden. Maar tegelijk vond ik het super spannend om met hem af te spreken. 
 			Ik had nogal wat dingetjes uit mijn verleden en nachtmerries die hem vast zouden afschrikken en waardoor hij zou wegrennen. Toch besloot ik het hem te vertellen, daar had Nathan recht op. Op een bankje in het park, 
 			gingen we s ochtends samen ontbijten en bijbellezen. Het was voor mij de mooiste date van allemaal. Toen ik Nathan vertelde over alles wat me had bezig gehouden rende hij niet weg.. Hij weigerde. Hij wilde me 
 			steunen en liet me zien hoe sterk zijn liefde was door Jezus die in hem werkte. </br>
@@ -60,8 +60,8 @@
 			<br><br>
 
 			<i>Nathans perspectief:</i></br>
-			In het begin heb ik het vaak lastig gehad met onze relatie. Vanaf het begin wilde ik er vol voor gaan, maar hoe wist ik nou dat Arjanna 'de ware' zou zijn? Mijn emoties schommelden en ik dacht dat ik niet zou mogen
-			twijfelen als Arjanna echt bij mij zou passen. Dankzij Arjannas onvoorstelbare vertrouwen en dankzij de Bijbel heb ik geleerd dat ware liefde niet afhankelijk is van emoties, maar van een keuze waar je achter blijft 
+			In het begin was onze relatie voor mij niet altijd makkelijk. Ik wilde er vol voor gaan, maar hoe wist ik nou dat Arjanna 'de ware' zou zijn? Mijn emoties schommelden en ik dacht dat ik niet zou mogen
+			twijfelen als Arjanna echt bij mij zou passen. Dankzij Arjanna's onvoorstelbare vertrouwen en dankzij de Bijbel heb ik geleerd dat ware liefde niet afhankelijk is van emoties, maar van een keuze waar je achter blijft 
 			staan. Naarmate dit besef groeide, besloot ik dat ik met haar wilde trouwen, want zij vult me aan als geen ander. Arjanna en ik delen onze diepste overtuigingen, we kunnen elkaar steunen op onze zwakste momenten 
 			en ik ken niemand met wie ik zoveel lol kan maken als met Arjanna. Daarom twijfel ik niet langer.
 			</br></br>			
@@ -79,7 +79,7 @@
 			</br></br>
 			
 			Dit verhaal begon in een bejaardentehuis en we hopen natuurlijk dat het daar ook zal eindigen. Dat we heel veel jaren samen mogen delen, samen liedjes mogen zingen, lachen en God zoeken. Dit verhaal begon ook 
-			bij God en door God. Eigenlijk is dit niet ons, maar Zijn verhaal. Hij bracht ons op een bijzondere manier bij elkaar in een schilderclub voor bejaarden. Dankzij onze relatie hebben we al zoveel mogen ontdekken
+			bij God en door God. Eigenlijk is dit niet ons, maar Zijn verhaal. Hij bracht ons op een bijzondere manier bij elkaar bij een schilderclub voor bejaarden. Dankzij onze relatie hebben we al zoveel mogen ontdekken
 			over wat liefde is en hoe God liefde gebruikt om te inspireren en te genezen. Hij is de stabiele basis waarop wij ons huwelijk willen bouwen. Want Hij is de bron voor alle liefde die wij kunnen geven. Daarom hopen 
 			wij ons hele leven lang van hem te blijven leren genieten van liefde en te leren hoe wij die liefde in kunnen zetten om hoop te brengen in deze gebroken wereld.
 			</br></br>
