--- a/Website/public/RSVP.html
+++ b/Website/public/RSVP.html
@@ -22,8 +22,12 @@
 			</ul>
 		</div>
 		
-		<iframe id="googleForm" src="https://docs.google.com/forms/d/e/1FAIpQLSd_UcSluqad8-zz169jzw5y69GNYJivWAjY2z7kZKsMXtMKKQ/viewform?embedded=true" width="100%" height="1670px" frameborder="0" >Laden…</iframe>
+		<iframe id="googleForm" src="https://docs.google.com/forms/d/e/1FAIpQLSd_UcSluqad8-zz169jzw5y69GNYJivWAjY2z7kZKsMXtMKKQ/viewform?embedded=true" width="100%" height="1000px" frameborder="0" >Laden…</iframe>
+		<div id="pageContent">
+		<h3> Heb je nog vragen? Stuur gerust een mail naar de ceremoniemeester: <a href= "mailto: nathanenarjannagaantrouwen@gmail.com"> nathanenarjannagaantrouwen@gmail.com </a> </h3>
+		</div>
 		<div class="overlap"></div>
+		
 	</div>
 	<div id="bottomBar" class="woodInfoBar">
 		<h3>Copyright &copy of zoiets</h3>
