--- a/Website/public/RSVP.html
+++ b/Website/public/RSVP.html
@@ -23,7 +23,7 @@
 		</div>
 		
 		<iframe id="googleForm" src="https://docs.google.com/forms/d/e/1FAIpQLSd_UcSluqad8-zz169jzw5y69GNYJivWAjY2z7kZKsMXtMKKQ/viewform?embedded=true" width="100%" height="1000px" frameborder="0" >Laden…</iframe>
-		<div id="pageContent">
+		<div id="pageContent" style="text-align: center">
 		<h3> Heb je nog vragen? Stuur gerust een mail naar de ceremoniemeester: <a href= "mailto: nathanenarjannagaantrouwen@gmail.com"> nathanenarjannagaantrouwen@gmail.com </a> </h3>
 		</div>
 		<div class="overlap"></div>
