--- a/Website/public/coronamaatregelen.html
+++ b/Website/public/coronamaatregelen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-	<title>Coronamaatregelen</title>
+	<title>Bruiloft updates</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/baseLayout.css"/>
 	<link rel="icon" href="favicon.png">
@@ -17,33 +17,39 @@
 				<li> <a href="index.html">Home</a>
 				<li> <a href="OnsVerhaal.html">Ons verhaal</a>
 				<li> <a href="RSVP.html">RSVP</a>
-				<li> <a href="coronamaatregelen.html">Coronamaatregelen</a> 
+				<li> <a href="coronamaatregelen.html">Informatie</a> 
 				<li> <a href="#" onclick='window.open("https://www.lijstje.nl/NathanEnArjanna");return false;'>Verlanglijstje</a>
 			</ul>
 		</div>
 		
 		<div id="pageContent">
-			<p> 
-			Helaas zijn er ook wat minder leuke dingen waar we rekening mee moeten houden op de bruiloft. We moeten ons aan de regels 
-			houden rondom het coronavirus. Omdat de maatregelen vaak worden veranderd door de overheid, zal deze pagina vaak worden geüpdatet. 
-			Kijk dus af en toe of er nog een update op de site staat. Ondanks de regels gaan we natuurlijk enorm genieten van deze dag.
-			<br><br>
-			<b>De huidige regels </b>: 
-			</p>
-			<ul>
-			<li><p>We wijzen je op je eigen verantwoordelijkheid om 1,5 m afstand te houden tot mensen die niet op hetzelfde adres wonen.</p></li>
-			<li><p>Als je klachten hebt die bij het coronavirus passen, blijf je thuis.</p></li>
-			<li><p>Volg op de locaties de adviezen van personeel op.</p></li>
-			<li><p>In de kerk: <br>
-				- Volg de instructies op van de koster. Hij zal je een plek aanwijzen waar je kunt gaan zitten. <br>
-				- Tijdens de dienst mag er ingetogen worden gezongen. <br> 
-			<li><p>We kunnen door de coronamaatregelen, maar een beperkt aantal mensen uitnodigen. Daarom kun je helaas niet je partner/date/+1 meenemen, als we hem of haar niet hebben uitgenodigd.
-			<li><p>Geef via de <a href="RSVP.html">RSVP</a> je aanwezigheid aan. Bij de RSVP zullen we om je NAW-gegevens vragen en je telefoonnummer. De RIVM stelt het verplicht om deze gegevens te verzamelen, 
-				zodat mogelijk contactonderzoek snel kan worden uitgevoerd. We zullen vertrouwelijk met je gegevens omgaan en ze niet openbaar maken.</p></li>
-			<li><p>In verband met de 1.5 meter afstand, hebben we er voor gekozen geen felicitatierij te houden. We komen graag bij je tafel langs om bij te kletsen en de felicitaties in ontvangst te nemen.
-			</ul>
+			<h2>Update 10 oktober</h2>
 			<p>
-			Kijk voor een volledig overzicht van de regels op <a href= "https://www.rijksoverheid.nl/onderwerpen/coronavirus-covid-19/nederlandse-maatregelen-tegen-het-coronavirus" target="_blank"> rijksoverheid.nl/coronavirus </a>
+			Lieve familie en vrienden,</br></br>
+			In deze vreemde tijd hebben we veel tegenslagen moeten verdragen voor onze bruiloft. Eén van deze tegenslagen is dat we niet de bruiloft met al onze bruiloftsgasten kunnen vieren. Vorige week is deze maatregel extra 
+			verzwaard en daardoor kan er nu helemaal geen feest gevierd worden (althans, niet met 1 grote groep). Gelukkig kan wat voor ons het allerbelangrijkst is (de kerkdienst) nog wel doorgaan. Maar ook daarin kwam er een 
+			harde klap. Nu lijkt het erop dat er niet meer dan 30 gasten aanwezig mogen zijn tijdens de bruiloft. Gelukkig kunnen de thuisblijvers meekijken via de livestream op 
+			<a href="https://www.pknhattem.nl/pagina/diensten/kerkdienst-kijken-kerktv">pknhattem.nl</a>. De 30 gasten die we wel uit kunnen nodigen zullen binnen enkele dagen een bericht van ons krijgen met meer 
+			informatie. Als je niet deze uitnodiging ontvangt, willen we je toch vragen om de hele dag vrij te houden, in het geval dat we jullie alsnog uit kunnen nodigen als de maatregelen versoepeld worden.
+			</br></br>
+			We zijn erg dankbaar voor wat er nog wel mogelijk is en dat we uit kunnen zien naar een super bijzondere dag. Toch hebben we jullie gebed nodig. We willen vragen of jullie willen bidden om de 
+			wijsheid om goed om te gaan met de omstandigheden en het vertrouwen dat nodig is om onze hulp van God te verwachten.
+			</br></br>
+			Voor vragen mogen jullie mailen naar <a href="mailto: nathanenarjannagaantrouwen@gmail.com">nathanenarjannagaantrouwen@gmail.com </a>.</br>
+			We wensen jullie veel zegen en Zijn rust toe in deze vreemde tijd.
+			</br></br>
+			Liefs,</br>
+			Nathan & Arjanna
+			</br></p>
+			<h2>Gevolgen en regels</h2>
+			<p> 
+			- Kijk voor een overzicht van alle regels op <a href= "https://www.rijksoverheid.nl/onderwerpen/coronavirus-covid-19/nederlandse-maatregelen-tegen-het-coronavirus" target="_blank"> rijksoverheid.nl/coronavirus </a></br>
+			- Geef via de <a href="RSVP.html">RSVP</a> je aanwezigheid aan. Bij de RSVP zullen we om je NAW-gegevens vragen en je telefoonnummer. De RIVM stelt het verplicht om deze gegevens te verzamelen, 
+			zodat mogelijk contactonderzoek snel kan worden uitgevoerd. We zullen vertrouwelijk met je gegevens omgaan en ze niet openbaar maken.</br>
+			- We kunnen door de coronamaatregelen maar een beperkt aantal mensen uitnodigen. Daarom kun je helaas niet je partner/date/+1 meenemen, als we hem of haar niet expliciet hebben uitgenodigd.</br>
+			</br>		
+			We proberen voor onze bruiloft de maatregels te handhaven. Omdat de maatregelen vaak worden veranderd door de overheid, zal deze pagina ook regelmatig worden geüpdatet. 
+			Jullie horen van ons als we een nieuw bericht voor je hebben. Ondanks de regels gaan we natuurlijk enorm genieten van deze dag!
 			</p>
 		</div>
 		
