--- a/Website/public/RSVP.html
+++ b/Website/public/RSVP.html
@@ -17,7 +17,7 @@
 				<li> <a href="index.html">Home</a>
 				<li> <a href="OnsVerhaal.html">Ons verhaal</a>
 				<li> <a href="RSVP.html">RSVP</a>
-				<li> <a href="coronamaatregelen.html">Coronamaatregelen</a> 
+				<li> <a href="coronamaatregelen.html">Informatie</a> 
 				<li> <a href="#" onclick='window.open("https://www.lijstje.nl/NathanEnArjanna");return false;'>Verlanglijstje</a>
 			</ul>
 		</div>
